native/socks5lib2.h

/* Code generated by cmd/cgo; DO NOT EDIT. */

/* package socks5lib2 */


#line 1 "cgo-builtin-export-prolog"

#include <stddef.h>

#ifndef GO_CGO_EXPORT_PROLOGUE_H
#define GO_CGO_EXPORT_PROLOGUE_H

#ifndef GO_CGO_GOSTRING_TYPEDEF
typedef struct { const char *p; ptrdiff_t n; } _GoString_;
extern size_t _GoStringLen(_GoString_ s);
extern const char *_GoStringPtr(_GoString_ s);
#endif

#endif

/* Start of preamble from import "C" comments.  */


#line 3 "main.go"

#include <stdint.h>

#line 1 "cgo-generated-wrapper"


/* End of preamble from import "C" comments.  */


/* Start of boilerplate cgo prologue.  */
#line 1 "cgo-gcc-export-header-prolog"

#ifndef GO_CGO_PROLOGUE_H
#define GO_CGO_PROLOGUE_H

typedef signed char GoInt8;
typedef unsigned char GoUint8;
typedef short GoInt16;
typedef unsigned short GoUint16;
typedef int GoInt32;
typedef unsigned int GoUint32;
typedef long long GoInt64;
typedef unsigned long long GoUint64;
typedef GoInt64 GoInt;
typedef GoUint64 GoUint;
typedef size_t GoUintptr;
typedef float GoFloat32;
typedef double GoFloat64;
#ifdef _MSC_VER
#if !defined(__cplusplus) || _MSVC_LANG <= 201402L
#include <complex.h>
typedef _Fcomplex GoComplex64;
typedef _Dcomplex GoComplex128;
#else
#include <complex>
typedef std::complex<float> GoComplex64;
typedef std::complex<double> GoComplex128;
#endif
#else
typedef float _Complex GoComplex64;
typedef double _Complex GoComplex128;
#endif

/*
  static assertion to make sure the file is being used on architecture
  at least with matching size of GoInt.
*/
typedef char _check_for_64_bit_pointer_matching_GoInt[sizeof(void*)==64/8 ? 1:-1];

#ifndef GO_CGO_GOSTRING_TYPEDEF
typedef _GoString_ GoString;
#endif
typedef void *GoMap;
typedef void *GoChan;
typedef struct { void *t; void *v; } GoInterface;
typedef struct { void *data; GoInt len; GoInt cap; } GoSlice;

#endif

/* End of boilerplate cgo prologue.  */

#ifdef __cplusplus
extern "C" {
#endif

extern void RegisterPort(long long int port);
extern void UnregisterPort(void);
extern void BridgeInit(void* api);
extern long long int CreateDirectServerTCP(int listenPort, char* username, char* password, long long int port);
extern long long int CreateDirectServerUDP(int listenPort, char* username, char* password, long long int port);
extern long long int CreateProxyToSocks5ServerTCP(int listenPort, char* username, char* password, char* proxyAddr, char* proxyUser, char* proxyPass, long long int port);
extern long long int CreateProxyToSocks5ServerUDP(int listenPort, char* username, char* password, char* proxyAddr, char* proxyUser, char* proxyPass, long long int port);
extern long long int CreateWithAuthServer(int listenPort, long long int port);
extern long long int CreateWithoutAuthServer(int listenPort, long long int port);
extern long long int StartSocks5Server(long long int srvID, long long int port);
extern void StopSocks5Server(long long int srvID, long long int port);
extern long long int ConnectDirectTCP(char* socksAddr, char* username, char* password, char* targetAddr, long long int port);
extern long long int ConnectDirectUDP(char* socksAddr, char* username, char* password, long long int port);
extern void StopTask(long long int taskID, long long int port);

#ifdef __cplusplus
}
#endif