lib/bindings/generated_bindings_for_socks5v2.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

/// Bindings for Socks5V2 Go shared library.
class Socks5V2Library {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  Socks5V2Library(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  Socks5V2Library.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  int _GoStringLen(_GoString_ s) {
    return __GoStringLen(s);
  }

  late final __GoStringLenPtr =
      _lookup<ffi.NativeFunction<ffi.Size Function(_GoString_)>>(
        '_GoStringLen',
      );
  late final __GoStringLen = __GoStringLenPtr
      .asFunction<int Function(_GoString_)>();

  ffi.Pointer<ffi.Char> _GoStringPtr(_GoString_ s) {
    return __GoStringPtr(s);
  }

  late final __GoStringPtrPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(_GoString_)>>(
        '_GoStringPtr',
      );
  late final __GoStringPtr = __GoStringPtrPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(_GoString_)>();

  void RegisterPort(int port) {
    return _RegisterPort(port);
  }

  late final _RegisterPortPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.LongLong)>>(
        'RegisterPort',
      );
  late final _RegisterPort = _RegisterPortPtr.asFunction<void Function(int)>();

  void UnregisterPort() {
    return _UnregisterPort();
  }

  late final _UnregisterPortPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('UnregisterPort');
  late final _UnregisterPort = _UnregisterPortPtr.asFunction<void Function()>();

  void BridgeInit(ffi.Pointer<ffi.Void> api) {
    return _BridgeInit(api);
  }

  late final _BridgeInitPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
        'BridgeInit',
      );
  late final _BridgeInit =
      _BridgeInitPtr.asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  int CreateDirectServerTCP(
    int listenPort,
    ffi.Pointer<ffi.Char> username,
    ffi.Pointer<ffi.Char> password,
    int port,
  ) {
    return _CreateDirectServerTCP(listenPort, username, password, port);
  }

  late final _CreateDirectServerTCPPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.LongLong Function(
            ffi.Int,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.LongLong,
          )
        >
      >('CreateDirectServerTCP');
  late final _CreateDirectServerTCP =
      _CreateDirectServerTCPPtr.asFunction<
        int Function(int, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int)
      >();

  int CreateDirectServerUDP(
    int listenPort,
    ffi.Pointer<ffi.Char> username,
    ffi.Pointer<ffi.Char> password,
    int port,
  ) {
    return _CreateDirectServerUDP(listenPort, username, password, port);
  }

  late final _CreateDirectServerUDPPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.LongLong Function(
            ffi.Int,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.LongLong,
          )
        >
      >('CreateDirectServerUDP');
  late final _CreateDirectServerUDP =
      _CreateDirectServerUDPPtr.asFunction<
        int Function(int, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int)
      >();

  int CreateProxyToSocks5ServerTCP(
    int listenPort,
    ffi.Pointer<ffi.Char> username,
    ffi.Pointer<ffi.Char> password,
    ffi.Pointer<ffi.Char> proxyAddr,
    ffi.Pointer<ffi.Char> proxyUser,
    ffi.Pointer<ffi.Char> proxyPass,
    int port,
  ) {
    return _CreateProxyToSocks5ServerTCP(
      listenPort,
      username,
      password,
      proxyAddr,
      proxyUser,
      proxyPass,
      port,
    );
  }

  late final _CreateProxyToSocks5ServerTCPPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.LongLong Function(
            ffi.Int,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.LongLong,
          )
        >
      >('CreateProxyToSocks5ServerTCP');
  late final _CreateProxyToSocks5ServerTCP =
      _CreateProxyToSocks5ServerTCPPtr.asFunction<
        int Function(
          int,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          int,
        )
      >();

  int CreateProxyToSocks5ServerUDP(
    int listenPort,
    ffi.Pointer<ffi.Char> username,
    ffi.Pointer<ffi.Char> password,
    ffi.Pointer<ffi.Char> proxyAddr,
    ffi.Pointer<ffi.Char> proxyUser,
    ffi.Pointer<ffi.Char> proxyPass,
    int port,
  ) {
    return _CreateProxyToSocks5ServerUDP(
      listenPort,
      username,
      password,
      proxyAddr,
      proxyUser,
      proxyPass,
      port,
    );
  }

  late final _CreateProxyToSocks5ServerUDPPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.LongLong Function(
            ffi.Int,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.LongLong,
          )
        >
      >('CreateProxyToSocks5ServerUDP');
  late final _CreateProxyToSocks5ServerUDP =
      _CreateProxyToSocks5ServerUDPPtr.asFunction<
        int Function(
          int,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          int,
        )
      >();

  int CreateWithAuthServer(int listenPort, int port) {
    return _CreateWithAuthServer(listenPort, port);
  }

  late final _CreateWithAuthServerPtr =
      _lookup<ffi.NativeFunction<ffi.LongLong Function(ffi.Int, ffi.LongLong)>>(
        'CreateWithAuthServer',
      );
  late final _CreateWithAuthServer =
      _CreateWithAuthServerPtr.asFunction<int Function(int, int)>();

  int CreateWithoutAuthServer(int listenPort, int port) {
    return _CreateWithoutAuthServer(listenPort, port);
  }

  late final _CreateWithoutAuthServerPtr =
      _lookup<ffi.NativeFunction<ffi.LongLong Function(ffi.Int, ffi.LongLong)>>(
        'CreateWithoutAuthServer',
      );
  late final _CreateWithoutAuthServer =
      _CreateWithoutAuthServerPtr.asFunction<int Function(int, int)>();

  int StartSocks5Server(int srvID, int port) {
    return _StartSocks5Server(srvID, port);
  }

  late final _StartSocks5ServerPtr =
      _lookup<
        ffi.NativeFunction<ffi.LongLong Function(ffi.LongLong, ffi.LongLong)>
      >('StartSocks5Server');
  late final _StartSocks5Server =
      _StartSocks5ServerPtr.asFunction<int Function(int, int)>();

  void StopSocks5Server(int srvID, int port) {
    return _StopSocks5Server(srvID, port);
  }

  late final _StopSocks5ServerPtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.LongLong, ffi.LongLong)>
      >('StopSocks5Server');
  late final _StopSocks5Server =
      _StopSocks5ServerPtr.asFunction<void Function(int, int)>();

  int ConnectDirectTCP(
    ffi.Pointer<ffi.Char> socksAddr,
    ffi.Pointer<ffi.Char> username,
    ffi.Pointer<ffi.Char> password,
    ffi.Pointer<ffi.Char> targetAddr,
    int port,
  ) {
    return _ConnectDirectTCP(socksAddr, username, password, targetAddr, port);
  }

  late final _ConnectDirectTCPPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.LongLong Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.LongLong,
          )
        >
      >('ConnectDirectTCP');
  late final _ConnectDirectTCP =
      _ConnectDirectTCPPtr.asFunction<
        int Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          int,
        )
      >();

  int ConnectDirectUDP(
    ffi.Pointer<ffi.Char> socksAddr,
    ffi.Pointer<ffi.Char> username,
    ffi.Pointer<ffi.Char> password,
    int port,
  ) {
    return _ConnectDirectUDP(socksAddr, username, password, port);
  }

  late final _ConnectDirectUDPPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.LongLong Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.LongLong,
          )
        >
      >('ConnectDirectUDP');
  late final _ConnectDirectUDP =
      _ConnectDirectUDPPtr.asFunction<
        int Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          int,
        )
      >();

  void StopTask(int taskID, int port) {
    return _StopTask(taskID, port);
  }

  late final _StopTaskPtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.LongLong, ffi.LongLong)>
      >('StopTask');
  late final _StopTask = _StopTaskPtr.asFunction<void Function(int, int)>();
}

typedef ptrdiff_t = ffi.LongLong;
typedef Dartptrdiff_t = int;

final class _GoString_ extends ffi.Struct {
  external ffi.Pointer<ffi.Char> p;

  @ptrdiff_t()
  external int n;
}

typedef GoInt8 = ffi.SignedChar;
typedef DartGoInt8 = int;
typedef GoUint8 = ffi.UnsignedChar;
typedef DartGoUint8 = int;
typedef GoInt16 = ffi.Short;
typedef DartGoInt16 = int;
typedef GoUint16 = ffi.UnsignedShort;
typedef DartGoUint16 = int;
typedef GoInt32 = ffi.Int;
typedef DartGoInt32 = int;
typedef GoUint32 = ffi.UnsignedInt;
typedef DartGoUint32 = int;
typedef GoInt64 = ffi.LongLong;
typedef DartGoInt64 = int;
typedef GoUint64 = ffi.UnsignedLongLong;
typedef DartGoUint64 = int;
typedef GoInt = GoInt64;
typedef GoUint = GoUint64;
typedef GoUintptr = ffi.Size;
typedef DartGoUintptr = int;
typedef GoFloat32 = ffi.Float;
typedef DartGoFloat32 = double;
typedef GoFloat64 = ffi.Double;
typedef DartGoFloat64 = double;

final class _C_float_complex extends ffi.Struct {
  @ffi.Array.multi([2])
  external ffi.Array<ffi.Float> _Val;
}

typedef _Fcomplex = _C_float_complex;
typedef GoComplex64 = _Fcomplex;

final class _C_double_complex extends ffi.Struct {
  @ffi.Array.multi([2])
  external ffi.Array<ffi.Double> _Val;
}

typedef _Dcomplex = _C_double_complex;
typedef GoComplex128 = _Dcomplex;
typedef GoString = _GoString_;
typedef GoMap = ffi.Pointer<ffi.Void>;
typedef GoChan = ffi.Pointer<ffi.Void>;

final class GoInterface extends ffi.Struct {
  external ffi.Pointer<ffi.Void> t;

  external ffi.Pointer<ffi.Void> v;
}

final class GoSlice extends ffi.Struct {
  external ffi.Pointer<ffi.Void> data;

  @GoInt()
  external int len;

  @GoInt()
  external int cap;
}
